# python-tsp

./: .gitignore  LICENSE  README.rst  README_pypi.rst  pyproject.toml  symmetric_results.csv
.github/workflows/: python-package.yml
.scripts/: checkup_scripts.sh
api/: datamodel.py  tsp.py  tspapi.py
doc/source/: conf.py  index.rst
docs/: distances.rst  solvers.rst
experiments/: run_experiments.py
experiments/atsp/: bestSolutions.txt  br17.atsp  ft53.atsp  ft70.atsp  ftv170.atsp  ftv33.atsp  ftv35.atsp  ftv38.atsp  ftv44.atsp  ftv47.atsp  ftv55.atsp  ftv64.atsp  ftv70.atsp  kro124p.atsp  p43.atsp  rbg323.atsp  rbg358.atsp  rbg403.atsp  rbg443.atsp  ry48p.atsp
experiments/tsp/: a280.opt.tour  a280.tsp  ali535.tsp  att48.opt.tour  att532.tsp  bayg29.opt.tour  bays29.opt.tour  berlin52.opt.tour  berlin52.tsp  bestSolutions.txt  bier127.tsp  brd14051.tsp  brg180.opt.tour  brg180.tsp  burma14.tsp  ch130.opt.tour  ch130.tsp  ch150.opt.tour  ch150.tsp  d1291.tsp  d15112.tsp  d1655.tsp  d18512.tsp  d198.tsp  d2103.tsp  d493.tsp  d657.tsp  dantzig42.tsp  dsj1000.tsp  eil101.opt.tour  eil101.tsp  eil51.opt.tour  eil51.tsp  eil76.opt.tour  eil76.tsp  fl1400.tsp  fl1577.tsp  fl3795.tsp  fl417.tsp  fnl4461.tsp  (+96 more)
python_tsp/: brute_force.py  distances.py  dynamic_programming.py  utils.py
python_tsp/distances/: __init__.py  data_processing.py  euclidean_distance.py  great_circle_distance.py  osrm_distance.py  tsplib_distance.py
python_tsp/exact/: __init__.py  branch_and_bound.py  brute_force.py  dynamic_programming.py
python_tsp/heuristics/: __init__.py  lin_kernighan.py  local_search.py  perturbation_schemes.py  record_to_record.py  simulated_annealing.py  variable_neighborhood_search.py
python_tsp/local_search/: __init__.py  two_opt.py
python_tsp/utils/: __init__.py  permutation_distance.py  setup_initial_solution.py
tests/: data.py  test_distances.py  test_exact.py  test_local_search.py  test_perturbation_schemes.py  test_python_tsp.py  test_simulated_annealing.py  test_utils.py
tests/api/: invalid_request.json  request.json  test_api.py
tests/distances/: test_data_processing.py  test_euclidean_distance.py  test_great_circle_distance.py  test_osrm_distance.py  test_tsplib_distance.py
tests/exact/: test_branch_and_bound.py  test_brute_force.py  test_dynamic_programming.py  test_exact.py
tests/heuristics/: test_lin_kernighan.py  test_local_search.py  test_perturbation_schemes.py  test_record_to_record.py  test_simulated_annealing.py  test_variable_neighborhood_search.py
tests/tsplib_data/: br17.atsp  dsj1000ceil.tsp  si1032.tsp
tests/utils/: test_permutation_distance.py  test_starting_node.py  (+1 more)
(+7 files in other folders)
