[tool.poetry]
name = "python_tsp"
version = "0.4.2"
description = "Library to solve the Traveling Salesperson Problem in pure Python."
readme = "README_pypi.rst"
authors = ["Fillipe Goulart <fillipe.gsm@tutanota.com>", "Luan Leonardo <>"]
repository = "https://github.com/fillipe-gsm/python-tsp"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tsplib95 = "^0.7.1"
requests = "^2.28.0"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
types-requests = "^2.28.11.5"
types-mock = "^4.0.15.2"
flake8 = "^6.0.0"
black = ">=22.10,<25.0"
pytest = "^7.4.0"
ipdb = "^0.13.13"
pytest-cov = "^4.1.0"
mock = "^5.1.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
